--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "update-packages": "npm install && cd ios && pod install && cd ..",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -10,10 +11,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.16.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
+    "jslint": "^0.12.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0"
   },
