--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.16.0",
+    "@react-native-async-storage/async-storage": "^1.15.13",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "babel-plugin-inline-import": "^3.0.0",
+    "i": "^0.3.7",
     "jslint": "^0.12.1",
+    "npm": "^8.1.4",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
